[gd_scene load_steps=7 format=3 uid="uid://cy4e7ffwu1lp5"]

[ext_resource type="Script" path="res://weapons/mina/pocisk_mina.gd" id="1_ybw7a"]
[ext_resource type="Texture2D" uid="uid://yy7pp5dqei3r" path="res://weapons/mina/pocisk_mina.png" id="2_3ukp2"]
[ext_resource type="AudioStream" uid="uid://dwlwsrg4vv1u6" path="res://audio/boom.ogg" id="3_i0f6s"]

[sub_resource type="SphereShape3D" id="SphereShape3D_u5o4b"]
radius = 3.5

[sub_resource type="SphereShape3D" id="SphereShape3D_2urra"]
radius = 0.446534

[sub_resource type="SphereShape3D" id="SphereShape3D_6gy6x"]
radius = 2.0

[node name="CharacterBody3D" type="CharacterBody3D"]
collision_layer = 2
slide_on_ceiling = false
script = ExtResource("1_ybw7a")

[node name="Area3D" type="Area3D" parent="."]
collision_mask = 2
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_u5o4b")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(7.5, 0, 0, 0, 7.5, 0, 0, 0, 7.5, 0, 0, 0)
billboard = 1
texture_filter = 0
texture = ExtResource("2_3ukp2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_2urra")

[node name="explosion_sound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_i0f6s")
volume_db = 80.0
unit_size = 15.0

[node name="Area3D_2" type="Area3D" parent="."]
collision_mask = 2
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D_2"]
shape = SubResource("SphereShape3D_6gy6x")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_entered" from="Area3D_2" to="." method="_on_area_3d_2_body_entered"]
